<resources>
    <string name="app_name">InposeryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="slide_pos">slide</string>
    <string name="desc_slide">We offer the convenience of your POS System.</string>
    <string name="title_slide">Manage Your Store Sales and Revenue Easily</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="title">Title</string>
    <string name="welcome_login">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="lg_bottom">Didn’t have account?</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="login_with_google">Login with Google</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="desc_forgotpw">Please enter your email address below to and we’ll send you an email with \ninstruction to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="check_your_email">Check your email</string>
    <string name="desc_checkmail">we have sent you an email to recover\nyour password on</string>
    <string name="send_me_another_email">Send me another email</string>
    <string name="didn_t_get_an_email">Didn’t get an email?</string>
    <string name="your_password_has_been_reset">Your Password has been reset</string>
    <string name="desc_resetcomplete">You need to login and use your new password</string>
    <string name="back_to_login">Back To Login</string>
    <string name="create_new_password">Create New Password</string>
    <string name="desc_newpw">Your password must be different from \nthe previous used password.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="weak_password">Weak password</string>
    <string name="fear_password">Fear password</string>
    <string name="strong_password">Strong password</string>
    <string name="manage_your_store_transaction">Manage your Store \nTransaction</string>
    <string name="sign_up">Sign Up</string>
    <string name="rg_top">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="name">Name</string>
    <string name="congratulation">Congratulation!</string>
    <string name="start">Start</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="berlangganan">Berlangganan</string>
    <string name="anda_belum_memiliki_atau_membuat_toko">Anda belum memiliki atau membuat toko!</string>
    <string name="login_melalui_website_dan_buat_toko_anda_melalu_website_kami_klik_dibawah">Login melalui website dan buat toko anda melalu website kami. klik dibawah</string>
    <string name="buat_toko">Buat Toko</string>
    <string name="pilih_plan_subscribe">Pilih Plan Subscribe</string>
    <string name="buat_tokomu_dan_undang_karyawan_untuk_manajemen_toko_yang_lebih_baik">Buat tokomu dan undang karyawan untuk manajemen toko yang lebih baik</string>
    <string name="monthly_plan">Monthly Plan</string>
    <string name="desc_subs">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="lanjut">Lanjut</string>
    <string name="title_activity_dashboard_toko">DashboardTokoActivity</string>
    <string name="title_produk">Produk</string>
    <string name="title_bayar">Bayar</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="buat_toko_anda">Buat Toko Anda</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="nomor_telepon_toko">Nomor Telepon Toko</string>
    <string name="alamat_toko">Alamat Toko</string>
    <string name="upload_foto">Upload Foto</string>
    <string name="sukses">Sukses</string>
    <string name="toko_berhasil_dibuat">Toko Berhasil Dibuat!</string>
    <string name="halaman_toko_akan_selalu_muncul_dibagian_side_menu_ubah_toko_dengan_mudah_pada_side_menu_buka_dan_klik_toko_untuk_melakukan_perubahan_dan_melakukan_transaksi">Halaman toko akan selalu muncul dibagian side menu, ubah toko dengan mudah pada side menu. Buka dan klik toko untuk melakukan perubahan dan melakukan Transaksi</string>
    <string name="mulai">Mulai</string>
    <string name="permintaan_berlangganan_dengan_nomor_pesanan_or0001_telah_selesai">Permintaan berlangganan dengan nomor pesanan OR0001 telah selesai</string>
    <string name="konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
    <string name="txt_transfer">#OR0001</string>
    <string name="informasi_pemesanan">Informasi Pemesanan</string>
    <string name="detail_pemesanan">Detail Pemesanan</string>
    <string name="item">Item</string>
    <string name="jumlah_item">Jumlah Item</string>
    <string name="harga">Harga</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="transfer_manual">Transfer Manual</string>
    <string name="otomatis_coming_soon">Otomatis (Coming Soon)</string>
    <string name="ringkasan_pemesanan">Ringkasan Pemesanan</string>
    <string name="sub_total">Sub Total</string>
    <string name="buat_pesanan">Buat Pesanan</string>
    <string name="informasi_penting">Informasi Penting</string>
    <string name="desc_info">Proses konfirmasi pembayaran akan membutuhkan waktu sekitar 20 menit jika menggunakan metode pembayaran manual. Mohon menunggu dengan sabar dan terima kasih.</string>
    <string name="rp">Rp.</string>
    <string name="_54_000">54.000</string>
    <string name="total_transfer">Total Transfer</string>
    <string name="informasi_pembayaran">Informasi Pembayaran</string>
    <string name="silahkan_lakukan_pembayaran_kesalah_satu_bank_dibawah_ini">Silahkan lakukan pembayaran kesalah satu Bank dibawah ini</string>
    <string name="bri">BRI</string>
    <string name="bni">BNI</string>
    <string name="mandiri">Mandiri</string>
    <string name="inposery_bank">Inposery Bank</string>
    <string name="_2267465634847">2267465634847</string>
    <string name="rp_54_000">Rp. 54.000</string>
    <string name="jumlah_yang_harus_dibayar">Jumlah yang harus dibayar</string>
    <string name="rp_27_000">Rp. 27.000</string>
    <string name="johnny_depp">Johnny Depp</string>
    <string name="owner">Owner</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="riwayat_berlangganan">Riwayat Berlangganan</string>
    <string name="monthly_plan_2">Monthly Plan(2)</string>
    <string name="selesai">Selesai</string>
    <string name="harus_dibayar">Harus Dibayar</string>
    <string name="sudah_bayar">Sudah Bayar</string>
    <string name="empty_product">Belum Ada Produk</string>
    <string name="pilih_tambah_produk_untuk_menambahkan_produk_kamu_kedalam_inventori">Pilih “Tambah Produk” untuk menambahkan produk kamu kedalam inventori</string>
    <string name="add_product">Tambah Produk</string>
    <string name="pilih_kelola_produk_untuk_menambahkan_produk_kamu_kedalam_inventori">Pilih “Kelola Produk” untuk menambahkan produk kamu kedalam inventori</string>
    <string name="kelola_produk">Kelola Produk</string>
    <string name="belum_ada_riwayar_transaksi">Belum Ada Riwayar Transaksi</string>
    <string name="semua_transaksi_yang_akan_kamu_lakukan_akan_terlihat_di_halaman_ini">Semua transaksi yang akan kamu lakukan akan terlihat di halaman ini</string>
    <string name="title_activity_drawer_cek">DrawerCek</string>
    <string name="tab_text_1">Semua Produk</string>
    <string name="tab_text_2">Stok Menipis</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="stok">Stok</string>
    <string name="simpan">Simpan</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="anda_belum_memiliki_kategori_apapun_klik_untuk_menambahkan_kategori">Anda belum memiliki kategori apapun klik “+” untuk menambahkan kategori</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="batal">Batal</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="nama_satuan">Nama Satuan</string>
    <string name="tambah_satuan">Tambah Satuan</string>
    <string name="anda_belum_memiliki_satuan_apapun_klik_untuk_menambahkan_kategori">Anda belum memiliki satuan apapun klik “+” untuk menambahkan kategori</string>
    <string name="pilih_satuan">Pilih Satuan</string>
    <string name="satuan">Satuan</string>

</resources>
